# sample-mcp-security-scanner

./: .gitignore  INSTALL.md  POWER.md  README.md  SCANNER_FILE_OUTPUT.md  SECURITY.md  mcp-github-config-example.json  mcp-local-config-example.json  mcp.json  pyproject.toml  requirements.txt  setup.py
.security/: config.yaml
agents/: README.md
agents/sec-lazio/: sec-lazio.json
docs/: INSTALL.md  SCANNER_FILE_OUTPUT.md
docs/examples/: mcp-github-config-example.json  mcp-local-config-example.json
hooks/: security-scan-on-save.kiro.hook  security-scan-report-on-save.kiro.hook
power/: mcp.json
power/steering/: scanning-workflows.md
security_scanner_mcp_server/: __init__.py  report_generator.py  server.py
steering/: scanning-workflows.md  secure-coding.md  security-report.md
tests/: simple_test.py  test_ash_integration.py  test_scanner.py
