[project]
name = "security_scanner_mcp_server"
version = "0.2.0"
description = "A Model Context Protocol (MCP) server for security scanning with Checkov, Semgrep, Bandit, and ASH"
readme = "README.md"
requires-python = ">=3.10, <=3.13"
license = {text = "MIT"}
authors = [
    {name = "Security Scanner MCP"},
]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
    "checkov>=3.0.0",
    "semgrep>=1.45.0",
    "bandit>=1.7.5",
    "loguru>=0.6.0",
    "mcp[cli]>=1.11.0",
    "pydantic>=1.10.0",
    "automated-security-helper @ git+https://github.com/awslabs/automated-security-helper.git@v3.2.5",
]

[project.optional-dependencies]
ash = [
    "automated-security-helper>=3.2.0",
]

[project.scripts]
"security_scanner_mcp_server" = "security_scanner_mcp_server.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["security_scanner_mcp_server"]
exclude = [
    ".insecure-test-samples",
    "tests",
    "*.md",
]